<resources>
    <string name="app_name">NoteLance</string>
    <string name="splash_textview">NOTELANCE</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">LOG IN</string>
    <string name="new_user_dialog">New User! Want To Sign Up ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_account">Already Registered? Log In</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="click_here_to_recover">CLICK HERE TO RECOVER</string>
    <string name="go_back">GO BACK TO LOGIN SCREEN</string>
    <string name="dont_worry">Don\'t Worry We Are Here</string>
    <string name="enter_your_registered_email">Enter Your Registered Mail</string>
    <string name="enter_your_name">Enter Your Name</string>
</resources>