<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/forgot_lock_icon"
        android:layout_width="@dimen/one_hundred_ten"
        android:layout_height="@dimen/one_hundred_ten"
        android:src="@drawable/lock"
        android:layout_marginTop="@dimen/one_hundred"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="@dimen/thirty_five_sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/ten"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_lock_icon"/>

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dont_worry"
        android:textSize="@dimen/twenty_three_sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/ten"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_tv"/>

    <EditText
        android:id="@+id/forgot_password_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_your_registered_email"
        android:padding="@dimen/ten"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="@dimen/ten"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/eighteen_sp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/twenty_five"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_tv"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/click_here_to_recover"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/fifteen_sp"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/fifteen_sp"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>